# lexiora

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json
.claude/: settings.json  settings.local.json
.omx/: metrics.json
backend/: config.py  main.py  requirements.txt
backend/routers/: chat.py  health.py
backend/services/: streamer.py
config/: settings.yaml
docs/superpowers/plans/: 2026-04-16-lexiora-implementation-plan.md  2026-04-16-lexiora-self-guided-implementation-plan.md  2026-04-18-lexiora-fastapi-react-implementation-plan.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/lib/: api.ts  data.ts  routes.ts  status.ts  types.ts
frontend/styles/: globals.css
lexiora-frontend-spec/: 01-product-and-ux-brief.md  02-information-architecture.md  03-visual-design-system.md  04-page-specifications.md  05-component-specifications.md  06-data-contracts-and-state.md  07-implementation-plan-for-coding-agent.md  08-prompt-for-codex-or-claude-code.md  09-copy-deck-and-microcopy.md  README.md  design-tokens.json
scripts/: import_sample_data.py
src/: config.py
src/agents/: coordinator.py  domain_agent.py  reviewer.py
src/app/: main.py
src/data/: collector.py  kg_builder.py  processor.py
src/retrieval/: fusion.py  graph_search.py  rag.py  vector_search.py
tests/: test_coordinator.py  test_domain_agent.py  test_fusion.py  test_graph_search.py  test_kg_builder.py  test_processor.py  test_reviewer.py  test_vector_search.py
(+28 files in other folders)
